lab1/Test/L1-A-10-67.output
Error Type B at Line 14
Error Type B at Line 19
Error Type B at Line 19
Error Type B at Line 25
Error Type A at Line 26
Error Type B at Line 32
