lab1/Test/L1-A-10-67.cmm
struct {
}kn , F3XuccX2 [ 44404662 ] 

;
float q5d ( ) {
  int H , dprxi5Q = f9gsHe = jT >= _6pKquN - RQ9NyBvFKKjaBCY9PGFy 
    [ Notu_OlXYKK_h_ || l1nhUO433LEi7Js && uQ71JUIVD * 
    - ! QOdK3QchETRj ( yMN_KQl275H_8LgIXG == y + AWfh1dsDimKvKE 
    * q8GsuTrXn4oC [ BUy > ! C_6 ( H , JOjPMtVpzeT || 
    aq6N1Y9kuqUy && eCn <= - FX ( KJqD < jFJU + yD6xGf2SdReQXh0d 
    / - ! LNYLKko3xaNIkHdTNo [ xBTwOm9YRkH7Ezvk_GlK = 
    o != ( S ) ] . uFTkc8cnCwkB . X8QQJKags ) ) ] * - 
    873402502 + 1514514281.669183415 / VDcQX5tT7k_Itmfed2F 
    167221903.681513504 / sSaIADcqQ ( ) ) ] . w7c60 ;
}
struct sKiW4s5_H_Q ;
int ;
int ;
= struct OwiK7ZfrP1Wg99fM return {
};
int O2W4C9smR7Mtdb ( int S ) {
  while ( nOz79Xz7DJOLs7Arl )   JHTYKZDO ;

  if ( FTHC )   return hXDlUpEANltIAveG ;
= else   if ( tzyD13D9_dmrQwBtZ ) {
  }:

}
int ;
int ;
int ;
int . ;
int ONYz ( ) {
  EZab1fIMs_3 ;
  if ( kM )   qX3wwwao1uA ;
else   dqaaoPdk ;

}
int ;
int ;
int ;
int ;
int gi37Si ( int RfRhuMzE7zfYlLbL , int xXC3Gg6R ) 
  {
}
